src/system/kernel/cache/block_cache.cpp
@@ -3046,9 +3046,11 @@ cache_abort_sub_transaction(void* _cache, int32 id)
 			// The parent transaction didn't change the block, but the sub
 			// transaction did - we need to revert to the original data.
 			// The block is no longer part of the transaction
-			ASSERT(block->original_data != NULL);
-			memcpy(block->current_data, block->original_data,
-				cache->block_size);
+			if (block->original_data != NULL) {
+				// The block might not have original data if was empty
+				memcpy(block->current_data, block->original_data,
+					cache->block_size);
+			}
 
 			if (last != NULL)
 				last->transaction_next = next;
